--- a/nwcaLandownerReport_fromApp.Rmd
+++ b/nwcaLandownerReport_fromApp.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "National Wetland Condition Assessment Landowner Report"
+title: "National Wetland Condition Assessment Field Visit Summary"
 author: ""
 date: ""
 params:
