--- a/nwcaLandownerReport_fromApp.Rmd
+++ b/nwcaLandownerReport_fromApp.Rmd
@@ -131,15 +131,19 @@ kable(verification_tbl,col.names=c('Station Visit Information',''), row.names=FA
   kable_styling(bootstrap_options = 'condensed', full_width = F, position = "float_left") %>%
   column_spec(1, border_right = T) %>%
   column_spec(2, width = "16em")
+```
 
-if(sampled=='Y' & exists("field_tbl")){
+```{r row 1 b tables, echo=F}
+if(sampled=='Y' & exists("field_tbl") & nrow(field_tbl)>0){
 kable(field_tbl,col.names=c('Field Water Quality Measurements',''), row.names=FALSE, align=c('l','r')) %>%
   kable_styling(bootstrap_options = 'condensed', full_width = F, position = "float_left") %>%
   column_spec(1, border_right = T, width = "20em") %>%
   column_spec(2, width = "16em")
 }
+```
 
-if(sampled=='Y' & exists("palt_tbl")){
+```{r row 1 c tables, echo=F}
+if(sampled=='Y' & exists("palt_tbl") & nrow(palt_tbl)>0){
 kable(palt_tbl ,col.names=c('Types of Physical Alteration Observed'), row.names =FALSE, align=c('l')) %>%
   kable_styling(bootstrap_options = 'condensed', full_width = F, position = "float_left") %>%
   column_spec(1, border_right = T, width = "30em") 
